Set Up Base Code
Base Code added for Landing Page, Login and Sign Up

--- a/src/components/SignUp1.html
+++ b/src/components/SignUp1.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <div className="SignUp">
+        SIGN UP
         <main>
             <form>
                 <label for="username">Username</label>
